# alpha-trader

./: .env.example  .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  STRATEGY.md  pyproject.toml
bot/: main.py  order_gateway.py
changelog/: v0.1.1.md  v0.1.md  v0.2.md
deploy/: DEPLOY.md  RUNBOOK.md  install.sh
deploy/logrotate/: alpha-trader
deploy/systemd/: alpha-trader-logger.service
scripts/: fetch_binance_klines.py  fetch_pm_windows.py  reconcile_pm.py
src/pm_spot_fair/: __init__.py  book_pressure.py  clock.py  config.py  fair.py  health.py  latency.py  log_format.py  market_logger_service.py  pm_book.py  pm_windows.py  signals_arb.py  signals_mm.py  signals_rebate.py  spot.py  symbols.py  vol.py
src/pm_spot_fair/feeds/: __init__.py  binance_ws.py  gamma.py  pm_clob.py
src/pm_spot_fair/sim/: backtest_opts.py  bankroll.py  event_sim.py  market_log_arb.py  synthetic_arb.py
tests/: test_clock.py  test_event_sim.py  test_fair.py  test_gamma.py  test_health.py  test_log_format.py  test_log_format_v3.py  test_market_logger_settle.py  test_pm_clob.py  test_pm_fee.py  test_pm_windows.py  test_settle.py  test_signals_arb.py  test_symbols.py  test_vol.py
tools/: analyze_market_logs.py  enrich_settle.py  market_logger.py  report.py  run_backtest.py  run_calibration.py  verify_deploy.py
