[project]
name = "pm-spot-fair"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "httpx>=0.27",
  "websockets>=12.0",
  "orjson>=3.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.4"]
analysis = ["pandas>=2.0", "matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_spot_fair"]

[tool.hatch.build.targets.sdist]
include = ["src/pm_spot_fair", "STRATEGY.md"]
